fix: override text alignment for not-found pages

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -75,6 +75,11 @@ html[data-theme='dark'] #kapa-widget-portal {
   }
 }
 
-.vp-toc-placeholder {
-  width: 100%;
+/* Fix for center-alignment issue on `.not-found` pages */
+.vp-page.not-found .theme-hope-content,
+.vp-page.not-found .vp-breadcrumb,
+.vp-page.not-found .vp-page-title,
+.vp-page.not-found .vp-toc-placeholder {
+  text-align: initial;
+  width: var(--content-width, 740px);
 }
